# defermi

./: .gitattributes  README.md  pyproject.toml  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  python-publish.yml
defermi/: analysis.py  defects.py  electronic_structure.py  entries.py  generator.py  plotter.py  structure.py  thermodynamics.py
defermi/chempots/: generator.py  oxygen.py  reservoirs.py
defermi/cli/: gui.py  main.py
defermi/gui/: chempots.py  dos.py  example.py  initialize.py  main.py  plotter.py  requirements.txt  session_state.defermi  temp.joblib  thermodynamics.py  utils.py
defermi/tests/: test_analysis.py
defermi/tools/: materials_project.py  structure.py  utils.py
defy/: __init__.py  analysis.py
defy/chempots/: oxygen.py  phase_diagram.py  reservoirs.py
defy/corrections/: kumagai.py
defy/testing/: chempots.py  core.py  defects.py
defy/tests/: test_analysis.py  test_defects.py  test_entries.py  test_generator.py  test_structure.py  test_thermodynamics.py
defy/tools/: utils.py
docs/: api.rst  conf.py  defermi.chempots.generator.rst  defermi.chempots.reservoirs.rst  defermi.corrections.rst  defermi.electronic_structure.rst  defermi.entries.rst  defermi.plotter.rst  defermi.rst  defermi.structure.rst  defermi.tools.utils.rst  index.rst
docs/api/: defy.tests.rst  defy.tools.tests.rst  modules.rst
streamlit/: app.py  example.py  requirements.txt
streamlit/test_files/: .~lock.DA_KN.csv#  DA_KN.csv
tutorials/: custom_functions.ipynb  interfaces.ipynb  overview.ipynb
(+146 files in other folders)
