[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "defy"
version = "1.0.0"
description = ""
readme = "README.md"
authors = [
    { name = "Lorenzo Villa" }
]
requires-python = ">=3.8"

dependencies = [
    "ase",
    "pymatgen>=2023.3.23",
    "pymatgen-analysis-defects>=2023.3.25"
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["defy*"]
exclude = [
    "defy.*.tests",
    "defy.*.*.tests",
    "defy.*.*.*.tests"
]

# Optional: if you want console scripts later
# [project.scripts]
# pynter = "pynter.cli.main:main"
